@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-24T08:17:39Z",
-  "count_outdated" : 912,
-  "uniques_outdated" : 538,
-  "count" : 958,
+  "timestamp" : "2023-10-25T01:00:34Z",
+  "count_outdated" : 915,
+  "uniques_outdated" : 540,
+  "count" : 959,
   "uniques" : 562,
   "clones" : [
-    {
-      "timestamp": "2023-10-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-10-11T00:00:00Z",
       "count": 3,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
